# taskwarrrior-minions

./: LICENSE  README.md  README.rst  pyproject.toml
tests/: test_taskwarrior_minions.py
