[tool.poetry]
name = "taskwarrior-minions"
version = "0.1.0"
description = "Some minions for the task warriors."
authors = ["Michel (sinarf) Blavin <sinarf@sinarf.org>"]

[tool.poetry.dependencies]
python = "^3.8"
tasklib = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
